# locobot_ws

./: .gitmodules  README.md  calibration.sh  install_kinect.sh  installer.sh
src/gesture_recognition/: README.md  package.xml  setup.py
src/gesture_recognition/gesture_recognition/: GestureNode.py
src/gesture_recognition/launch/: gesture_recognizer.launch.py
src/joystick/: README.md  joystick_doc  package.xml  setup.py
src/joystick/joystick/: __init__.py  config.py  joy2cmdvel.py  talker_360.py  talker_PS3.py
src/joystick/launch/: joystick_360.launch.py  joystick_PS3.launch.py
src/locobot_control/: CMakeLists.txt  README.md  package.xml
src/locobot_control/config/: navigation_mppi.yaml  navigation_rpp.yaml  rs_camera.yaml
src/locobot_control/config/camera_calibration/: k01_tags.yaml
src/locobot_control/include/state_machine/: StateMachine.h
src/locobot_control/launch/: arm_to_sleep.launch.py  demo.launch.py  include_camera.launch.py  include_markers.launch.py  remote.launch.py  robot.launch.py  second_kinect.launch.py  simulation.launch.py  state_machine.launch.py
src/locobot_control/launch/camera_calibration/: calib_master.launch.py  k01calib.launch.py  k02calib.launch.py
src/locobot_control/maps/big_arena/: big_arena.yaml
src/locobot_control/maps/empty_map/: empty_map.pgm
src/locobot_control/maps/simulation_map/: simulation_map.pgm  simulation_map.yaml
src/locobot_control/maps/small_arena/: small_arena.pgm
src/locobot_control/models/big_arena/: big_arena.sdf
src/locobot_control/models/camera_1/: model.sdf
src/locobot_control/models/camera_2/: model.sdf
src/locobot_control/models/locobot_tag/: model.config
src/locobot_control/models/obstacle/: model.config  model.sdf
src/locobot_control/models/small_arena/: model.config
src/locobot_control/rviz/: navigation.rviz
src/locobot_control/src/state_machine/: StateMachine.cpp
src/locobot_control/worlds/: small_arena.world  static_obstacle.world
src/locobot_control_interfaces/: CMakeLists.txt  README.md  package.xml
src/locobot_control_interfaces/srv/: ControlGripper.srv
src/simulation/: CMakeLists.txt  README.md  package.xml
src/simulation/behavior_tree/: NavigationWithReplanning-MPPI.xml  NavigationWithReplanning-RPP.xml  NavigationWithReplanning.btproj  NavigationWithReplanning.xml
src/simulation/config/: amcl.yaml  apriltag.yaml  kinect.yaml  kinect2.yaml  navigation.yaml  navigation_mppi.yaml  navigation_rpp.yaml  robot_navigation.yaml  rs_camera.yaml  simulation_navigation.yaml  slam.yaml
src/simulation/config/camera_calibration/: k02_tags.yaml  tags_36h11_all.yaml
src/simulation/include/: LocobotControl.h  LocobotTracker.h  TFRemapper.h
src/simulation/include/state_machine/: StateMachine.h
src/simulation/launch/: amcl.launch.py  arm_to_sleep.launch.py  demo.launch.py  demo_no_lidar.launch.py  include_camera.launch.py  include_markers.launch.py  navigation.launch.py  remote.launch.py  robot.launch.py  second_kinect.launch.py  simulation.launch.py  simulation_no_lidar.launch.py  slam.launch.py  state_machine.launch.py
src/simulation/launch/camera_calibration/: k01calib.launch.py  k02calib.launch.py
src/simulation/maps/empty_map/: empty_map.yaml
src/simulation/maps/small_arena/: small_arena.yaml
src/simulation/maps/static_obstacle/: static_obstacle.pgm  static_obstacle.yaml
src/simulation/media/materials/scripts/: tags.material
src/simulation/models/big_arena/: model.config
src/simulation/models/camera/: model.sdf
src/simulation/models/camera_1/: model.config
src/simulation/models/camera_2/: model.config
src/simulation/models/locobot_tag/: model.sdf
src/simulation/models/map_tag/: map_tag.dae  model.config  model.sdf
src/simulation/models/map_tag/materials/scripts/: map_tag.material
src/simulation/models/small_arena/: small_arena.sdf
src/simulation/rviz/: navigation.rviz
src/simulation/src/: ArmSleepPosition.cpp  Demo.cpp  LocobotControl.cpp  LocobotTracker.cpp  TFPublisher.cpp  TFRemapper.cpp  demo_no_lidar.cpp
src/simulation/src/state_machine/: HumanEmulator.cpp  StateMachine.cpp  main.cpp
src/simulation/urdf/: locobot_tag.urdf.xacro
src/simulation/urdf/media/materials/scripts/: locobot_tag.material
src/simulation/worlds/: big_arena.world  dynamic_obstacle.world  small_arena.world
src/simulation_interfaces/: CMakeLists.txt  package.xml
src/simulation_interfaces/action/: StateMachine.action
src/simulation_interfaces/srv/: ClearError.srv  ControlStates.srv  LastError.srv
