<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick</name>
  <version>2.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alessio.lovato.1@studenti.unipd.it">alessio</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
