<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation</name>
  <version>0.1.0</version>
  <description>This package contains the code to run the LoCoBot WX200 both in simulation and real world</description>
  <maintainer email="alessio.lovato.1@studenti.unipd.it">alessio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Navigation and slam dependencies -->
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>


  <!-- Rclcpp dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <!-- Moveit dependencies -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>

  <!-- Interbotix dependencies -->
  <depend>interbotix_xs_modules</depend>

  <!-- Apriltag detection dependencies -->
  <depend>apriltag_ros</depend>
  <depend>image_proc</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
